--- a/views/adminstudentinfo.ejs
+++ b/views/adminstudentinfo.ejs
@@ -119,7 +119,7 @@
                             </td>
                         </form>
                         <td>
-                            <form action="/delete/<%=student.Student_Id%>" method="POST">
+                            <form action="/delete/<%=student.StudentId%>" method="POST">
                                 <button type="submit" class="btn btn-primary btn-sm ">Delete</button>
                             </form>
 
