--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Login</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="/home.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Jomolhari&display=swap" rel="stylesheet">
@@ -21,7 +21,7 @@
 <body style="padding-top: 50px">
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-navbar fixed-top">
-        <a class="navbar-brand" href="/home ">Chalk & Chauser</a>
+        <a class="navbar-brand" href=<%=home%>>Chalk & Chauser</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                           <span class="navbar-toggler-icon"></span>
                         </button>
@@ -29,7 +29,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/home">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href=<%=home%></a>Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">News</a>
@@ -42,19 +42,30 @@
                     <a class="nav-link" href="#">Contact Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/adminstudentinfo">Student Information</a>
+                    <!-- <a class="nav-link" href="/adminstudentinfo">Student Information</a> -->
+                    <%- studentinfo %>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/paymentinfo">Payment Info</a>
+                    <!-- <a class="nav-link" href="/paymentinfo">Paymentinfo</a> -->
+                    <%- paymentinfo %>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/payform">Add Payments</a>
+                    <!-- <a class="nav-link" href="/payform">Add Payments</a> -->
+                    <%- addpayment %>
                 </li>
 
             </ul>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item ">
-                    <a class="nav-link " href="/login">Sign In</a>
+                    <a class="nav-link " href=<%=login%>>
+                        <%= signIn %>
+                    </a>
+                </li>
+                <li class="nav-item ">
+                    <!-- <a class="nav-link " href=/register>
+                           Register
+                        </a> -->
+                    <%-reglink%>
                 </li>
 
             </ul>
@@ -115,7 +126,7 @@
                             <li>A friendly environment</li>
                             <li> A Play ground</li>
                             <li>Personal development</li>
-                            <li> Educatioal materials</li>
+                            <li> Educational materials</li>
                         </ul>
                     </div>
 
