--- a/views/register.ejs
+++ b/views/register.ejs
@@ -54,7 +54,7 @@
     <div class="container">
 
         <div class="formbeautify">
-            <form action="/register" method="POST">
+            <form action="/register" method="POST" autocomplete="off">
                 <div class="form-group">
                     <label for="firstName">First Name</label>
                     <input type="text" class="form-control" name="firstName" id="firstName" placeholder="">
