--- a/public/monthlypayment.css
+++ b/public/monthlypayment.css
@@ -21,18 +21,13 @@
     /* text-align: center; */
 }
 
-select {
-    max-width: 15%;
-    margin-left: 10%;
-    margin-bottom: 10px;
+.table-nonfluid {
+    width: auto !important;
+    min-width: 70%;
+    margin: 10px auto;
+    text-align: center;
 }
 
-button {
-    margin-left: 15%;
-    margin-bottom: 10px;
-}
-
-h4 {
-    font-size: 20px;
-    margin-left: 2%;
+h1 {
+    margin-top: 10px;
 }
