--- a/views/login.ejs
+++ b/views/login.ejs
@@ -38,12 +38,9 @@
                     <a class="nav-link" href="#">Contact Us</a>
                 </li>
             </ul>
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item ">
-                    <a class="nav-link " href="/login">Sign In</a>
-                </li>
 
-            </ul>
+
+
 
         </div>
     </nav>
@@ -61,7 +58,7 @@
 
         <div class="formbeautify">
 
-            <form action="/login/auth" method="post">
+            <form action="/login/auth" method="post" autocomplete="off">
                 <div class="form-group">
 
                     <input type="text" class="form-control" name="username" placeholder="Email">
