--- a/views/payform.ejs
+++ b/views/payform.ejs
@@ -62,12 +62,25 @@
 
                 </div>
                 <div class="form-group">
-                    <label for="month">Month</label>
-                    <input type="text" class="form-control" name="month" placeholder="">
+                    <label for="month">Select Month</label>
+                    <select class="form-control form-control-sm" name="month">
+                                <option value="January">January</option>
+                                <option value="February">February</option>
+                                <option value="March">March</option>
+                                <option value="April">April</option>
+                                <option value="May">May</option>
+                                <option value="June">June</option>
+                                <option value="July">July</option>
+                                <option value="August">August</option>
+                                <option value="September">September</option>
+                                <option value="October">October</option>
+                                <option value="November">November</option>
+                                <option value="December">December</option>
+                              </select>
 
                 </div>
                 <div class="form-group">
-                    <label for="amount">amount</label>
+                    <label for="amount">Amount</label>
                     <input type="text" class="form-control" name="amount" placeholder="">
 
                 </div>
